add basic html outline to index and create button click in js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>BeepBoop: A simple game</title>
   </head>
   <body>
-    <h2>Play Beep Boop</h2>
+    <div class="container">
+      <h2>Play Beep Boop</h2>
+      <form id="formOne">
+        <label for="inputNumber">Input a Number</label>
+        <input id="inputID" type="text">
+        <button id="submitButton" type="submit" name="button">Let's Play!</button>
+      </form>
+      <h3>Beep or Boop:</h3>
+      <p id="output"></p>
+    </div>
   </body>
 </html>
