--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="container">
-      <h2>Play Beep Boop</h2>
+      <h2 id="header">Play Beep Boop</h2>
       <form id="formOne">
         <label for="inputNumber">Input a Number</label>
-        <input id="inputID" type="text">
+        <input id="inputNumber" type="text">
         <button id="submitButton" type="submit" name="button">Let's Play!</button>
       </form>
       <h3>Beep or Boop:</h3>
