add image and color to index.html

--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
   </head>
   <body>
     <div class="container">
-      <h2 id="header">Play Beep Boop</h2>
+      <div class="jumbotron">
+        <h2 id="header">BeepBoop:</h2>
+        <h4>A simple game to play. Not so simple to make.</h4>
+      </div>
       <form id="formOne">
         <label for="inputNumber">Input a Number</label>
         <input id="inputNumber" type="text">
         <button id="submitButton" type="submit" name="button">Let's Play!</button>
       </form>
-      <h3>Beep or Boop:</h3>
-      <p id="output"></p>
+        <div class="resultDisplayArea">
+          <h3>Beep or Boop:</h3>
+          <p id="output"></p>
+        </div>
+
     </div>
   </body>
 </html>
