--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <div class="container">
       <div class="jumbotron">
         <h2 id="header">BeepBoop:</h2>
-        <h4>A simple game to play. Not so simple to make.</h4>
+        <h4>A simple game to play.</h4>
+        <h5>Not so simple to make.</h5>
+        <p><em>Watch in wonder<br>As numbers containing 1 arrive as beeps<br>Numbers containing 0 arrive as boops and a<br> <strong>special surprise</strong><br>Will appear with numbers divisible by 3<em></p>
       </div>
       <form id="formOne">
-        <label for="inputNumber">Input a Number</label>
-        <input id="inputNumber" type="text">
+        <label for="inputNumber"><strong>Input a Number</strong></label>
+        <input id="inputNumber" class="inputSpace" type="text">
         <button id="submitButton" type="submit" name="button">Let's Play!</button>
       </form>
         <div class="resultDisplayArea">
-          <h3>Beep or Boop:</h3>
+          <h3></h3>
           <p id="output"></p>
         </div>
 
