--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h2 id="header">BeepBoop:</h2>
-        <h4>A simple game to play.</h4>
-        <h5>Not so simple to make.</h5>
-        <p><em>Watch in wonder<br>As numbers containing 1 arrive as beeps<br>Numbers containing 0 arrive as boops and a<br> <strong>special surprise</strong><br>Will appear with numbers divisible by 3<em></p>
+        <h2 id="header">BeepBoop</h2>
+        <h4>A simple game</h4>
+        <p><em>Watch in wonder<br>As numbers containing 1 arrive as beeps<br>Numbers containing 0 arrive as boops and a<br> <strong>SPECIAL SURPRISE</strong><br>Will appear with numbers divisible by 3<em></p>
       </div>
       <form id="formOne">
         <label for="inputNumber"><strong>Input a Number</strong></label>
