--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
     <div class="container">
       <div class="jumbotron">
         <h2 id="header">BeepBoop</h2>
-        <h4>A simple game</h4>
-        <p><em>Watch in wonder<br>As numbers containing 1 arrive as beeps<br>Numbers containing 0 arrive as boops and a<br> <strong>SPECIAL SURPRISE</strong><br>Will appear with numbers divisible by 3<em></p>
+        <h4>a simple game</h4>
+        <p><em>watch in wonder<br>As numbers containing 1 arrive as beeps<br>numbers containing 0 arrive as boops and a<br> <strong>SPECIAL SURPRISE</strong><br>will appear with numbers divisible by 3<em></p>
       </div>
       <form id="formOne">
         <label for="inputNumber"><strong>Input a Number</strong></label>
         <input id="inputNumber" class="inputSpace" type="text">
         <button id="submitButton" type="submit" name="button">Let's Play!</button>
       </form>
-        <div class="resultDisplayArea">
+      <div class="resultDisplayArea">
           <h3></h3>
           <p id="output"></p>
-        </div>
-
+      </div>
     </div>
   </body>
 </html>
