update readme, font in css, and cleaned html

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <div class="jumbotron">
         <h2 id="header">BeepBoop</h2>
         <h4>a simple game</h4>
-        <p><em>watch in wonder<br>As numbers containing 1 arrive as beeps<br>numbers containing 0 arrive as boops and a<br> <strong>SPECIAL SURPRISE</strong><br>will appear with numbers divisible by 3<em></p>
+        <p><em>watch in wonder<br>as numbers containing 1 arrive as <strong>beeps</strong><br>numbers containing 0 arrive as <strong>boops</strong> and a<br> <strong>SPECIAL SURPRISE</strong><br>will appear with numbers divisible by 3</em></p>
       </div>
       <form id="formOne">
         <label for="inputNumber"><strong>Input a Number</strong></label>
         <input id="inputNumber" class="inputSpace" type="text">
-        <button id="submitButton" type="submit" name="button">Let's Play!</button>
+        <button id="submitButton" type="submit" name="button"><strong>Let's Play!</strong></button>
       </form>
       <div class="resultDisplayArea">
           <h3></h3>
